# berth

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker/: README.md  daemon.Dockerfile
docs/: caddy.md  deploy.md  multi-node.md  predictor.md  release.md  troubleshooting.md  upgrade-0.4.md
docs/dashboards/: berth.json  serve-engine.json
docs/superpowers/plans/: 2026-05-18-multi-node-tunneled-slice.md  2026-05-19-observability-data-plane.md  2026-05-19-smart-routing-and-resilience.md  2026-05-20-pre-deploy-hardening.md  2026-05-23-berth-adopt-hosted-model.md  2026-05-24-berth-hardening-responses.md
examples/: README.md  behind-caddy-config.toml  service-profile-qwen.json  service-route-chat.json  single-node-config.toml
packaging/: berth-wrapper  berth.service  serve-engine.service
scripts/: bench.py  install.sh  security_probe.py  setup-leader-vps.sh  smoke_e2e.sh  smoke_p03_engines.sh  smoke_p04_auth.sh
src/berth/: config.py
src/berth/auth/: limiter.py  tiers.py  (+2 more)
src/serve_engine/: config.py
tests/integration/: test_adapter_lifecycle.py  test_adopt_end_to_end.py  test_daemon_tls_listeners.py  test_dispatch_retry_e2e.py  test_enrollment_uri_flow.py  test_metrics_aggregation.py  test_openai_proxy.py  test_openai_proxy_http.py  test_proxy_backpressure.py  test_proxy_body_size_limit.py  test_proxy_header_allowlist.py  test_remote_agent_roundtrip.py  test_security_probe_live.py
tests/unit/: test_adapter_downloader.py  test_adapter_router.py  test_adapter_store.py  test_admin_adapter_endpoints.py  test_admin_endpoints.py  test_admin_events_endpoint.py  test_admin_metrics_snapshot.py  test_admin_nodes.py  test_admin_register.py  test_adopted_admin_guards.py  test_adopted_health_probe.py  test_adopted_module.py  test_adopted_store.py  test_agent_client.py  test_agent_install_service.py  test_agent_link_interface.py  test_agent_registry.py  test_agent_reports_adopted.py  test_api_keys_pepper.py  test_api_keys_store.py  test_auth_middleware.py  test_backup_cmd.py  test_ca.py  test_ca_server_cert.py  test_cli_adopt.py  test_cli_agent_register.py  test_cli_ipc.py  test_cli_nodes.py  test_config_resolution.py  test_deploy_cmd.py  test_deployment_adapters_store.py  test_deployment_plans_store.py  test_deployments_store_cas.py  test_dispatch.py  test_dispatch_errors.py  test_docker_client.py  test_doctor.py  test_downloader.py  test_enrollment.py  test_enrollment_uri.py  (+73 more)
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  eventSource.ts  launchForm.ts  styles.css
(+209 files in other folders)
