[project]
name = "serve-engine"
version = "0.2.2"
description = "Single-node multi-key inference orchestrator over vLLM and SGLang"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "typer>=0.12",
    "docker>=7.1",
    "huggingface_hub>=0.24",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "nvidia-ml-py>=12.0",
    "cryptography>=42",
    "websockets>=12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0.12",
    "anyio>=4.4",
]

[project.scripts]
serve = "berth.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/berth"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
files = ["src/berth"]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_configs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
